--- a/env-postgres.env
+++ b/env-postgres.env
@@ -1,4 +1,4 @@
 POSTGRES_SERVER=db
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=j7ERMzhR
-POSTGRES_DB=app
+POSTGRES_PASSWORD=test_pw
+POSTGRES_DB=wally
