--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,11 +19,7 @@ services:
     environment:
       - SERVER_NAME=${DOMAIN}
       - SERVER_HOST=http://${DOMAIN}
-    labels:
-      - traefik.frontend.rule=PathPrefix:/api,/docs,/redoc
-      - traefik.enable=true
-      - traefik.port=80
-      - traefik.tags=${TRAEFIK_TAG}
+      - PORT=8888
     ports:
       - '8888:8888'
     depends_on: 
@@ -40,24 +36,6 @@ services:
       - SERVER_NAME=backend
     volumes:
       - ./backend/app:/app
-  proxy:
-    image: traefik:v1.7
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: --docker \
-      --docker.watch \
-      --docker.exposedbydefault=false \
-      --constraints=tag==${TRAEFIK_TAG} \
-      --logLevel=DEBUG \
-      --accessLog \
-      --web
-    labels:
-      - traefik.frontend.rule=Host:${DOMAIN}
-      - traefik.enable=true
-      - traefik.port=80
-    ports:
-      - '80:80'
-      - '8090:8080'
   db:
     image: mdillon/postgis:11
     env_file:
