--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.4.4",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "esri-leaflet": "^2.2.4",
     "leaflet": "^1.5.1",
@@ -20,6 +21,7 @@
     "leaflet.locatecontrol": "^0.67.0",
     "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
+    "supercluster": "^6.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
