--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,4 @@
-# Stage 0, "build-stage", based on Node.js, to build and compile the frontend
-FROM tiangolo/node-frontend:10 as build-stage
+FROM openshift/nodejs:8 as build
 
 WORKDIR /app
 
@@ -9,20 +8,15 @@ RUN npm install
 
 COPY ./ /app/
 
-ARG FRONTEND_ENV=production
-
-ENV VUE_APP_ENV=${FRONTEND_ENV}
-
-# Comment out the next line to disable tests
 RUN npm run test:unit
 
 RUN npm run build
 
 
-# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:1.15
+FROM openshift/nginx:1.12
 
-COPY --from=build-stage /app/dist/ /usr/share/nginx/html
+COPY --from=build /app/dist/ /usr/share/nginx/html
 
-COPY --from=build-stage /nginx.conf /etc/nginx/conf.d/default.conf
-COPY ./nginx-backend-not-found.conf /etc/nginx/extra-conf.d/backend-not-found.conf
+COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 8080
