try to avoid image name replacement

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ COPY . .
 RUN npm run build
 
 
-FROM nginx:mainline
+FROM docker.io/nginx:mainline
 
 COPY --from=build /app/dist/ /usr/share/nginx/html
 
