--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,13 +11,11 @@ COPY . .
 RUN npm run build
 
 
-FROM docker.io/nginx:mainline
+FROM nginx:1.12
 
 COPY --from=build /app/dist/ /usr/share/nginx/html
 
-COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
-
-RUN chmod g+rwx /var/cache/nginx /var/run /var/log/nginx
+COPY --from=build /app/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 8080
-CMD ["nginx", "-g", "daemon off;"]
+CMD /tmp/scripts/run
