add more s2i scripts into Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,9 +13,11 @@ RUN npm run build
 
 FROM nginx:1.12
 
-COPY --from=build /app/dist/ /usr/share/nginx/html
+COPY --from=build /app/dist/ /tmp/src
 
-COPY --from=build /app/nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/nginx.conf /tmp/src/nginx.conf
+
+RUN /usr/libexec/s2i/assemble
 
 EXPOSE 8080
 CMD /usr/libexec/s2i/run
