--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -57,7 +57,7 @@ http {
     # text/html is always compressed by HttpGzipModule
 
     # what types to include
-    include       /etc/nginx/mime.types;
+    include       /etc/opt/rh/rh-nginx112/nginx/mime.types;
     # what is the default one
     default_type  application/octet-stream;
 
