try without nginx.conf

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,7 +15,7 @@ FROM nginx:1.12
 
 COPY --from=build /app/dist/ /tmp/src
 
-COPY --from=build /app/nginx.conf /tmp/src/nginx.conf
+# COPY --from=build /app/nginx.conf /tmp/src/nginx.conf
 
 RUN /usr/libexec/s2i/assemble
 
