--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.7",
     "@types/leaflet": "^1.4.4",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
