--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mdi/font": "^3.7.95",
     "@types/geojson": "^7946.0.7",
     "@types/leaflet": "^1.4.4",
     "axios": "^0.19.0",
@@ -22,6 +23,7 @@
     "leaflet.locatecontrol": "^0.67.0",
     "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
+    "material-design-icons-iconfont": "^5.0.1",
     "supercluster": "^6.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
