--- a/openshift/database.deploy.yaml
+++ b/openshift/database.deploy.yaml
@@ -188,7 +188,7 @@ objects:
             value: 0.0.0.0:5432
           - name: PATRONI_RESTAPI_LISTEN
             value: 0.0.0.0:8008
-          image: ${IMAGE_REGISTRY}/${IMAGE_STREAM_NAMESPACE}/${IMAGE_STREAM_TAG}
+          image: docker-registry.default.svc:5000/bfpeyx-test/patroni-postgis:10-2.5
           # Because we are using image reference to a tag, we need to always pull the image otherwise
           #   we end up with outdated/out-of-sync image depending on the node where it is running
           imagePullPolicy: Always
