auto trigger on image change

--- a/openshift/frontend.deploy.yaml
+++ b/openshift/frontend.deploy.yaml
@@ -96,7 +96,7 @@ objects:
       test: false
       triggers:
         - imageChangeParams:
-            automatic: false
+            automatic: true
             containerNames:
               - wally
             from:
