--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,34 @@
-# auto detects a good number of processes to run
-worker_processes auto;
+# For more information on configuration, see:
+#   * Official English Documentation: http://nginx.org/en/docs/
+#   * Official Russian Documentation: http://nginx.org/ru/docs/
 
-#Provides the configuration file context in which the directives that affect connection processing are specified.
+
+worker_processes auto;
+error_log /var/opt/rh/rh-nginx112/log/nginx/error.log;
+pid /var/opt/rh/rh-nginx112/run/nginx/nginx.pid;
+
+# Load dynamic modules. See /opt/rh/rh-nginx112/root/usr/share/doc/README.dynamic.
+include /opt/rh/rh-nginx112/root/usr/share/nginx/modules/*.conf;
+
 events {
-    # Sets the maximum number of simultaneous connections that can be opened by a worker process.
-    worker_connections 8000;
-    # Tells the worker to accept multiple connections at a time
-    multi_accept on;
+    worker_connections  1024;
 }
 
-
 http {
-  # Enable Gzip compressed.
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/opt/rh/rh-nginx112/log/nginx/access.log  main;
+
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+
+
+    # Enable Gzip compressed.
     gzip on;
 
     # Enable compression both for HTTP/1.0 and HTTP/1.1 (required for CloudFront).
@@ -56,26 +73,22 @@ http {
       text/x-component;
     # text/html is always compressed by HttpGzipModule
 
-    # what types to include
     include       /etc/opt/rh/rh-nginx112/nginx/mime.types;
-    # what is the default one
     default_type  application/octet-stream;
 
-    # Sets the path, format, and configuration for a buffered log write
-    log_format compression '$remote_addr - $remote_user [$time_local] '
-        '"$request" $status $upstream_addr '
-        '"$http_referer" "$http_user_agent"';
+    # Load modular configuration files from the /etc/nginx/conf.d directory.
+    # See http://nginx.org/en/docs/ngx_core_module.html#include
+    # for more information.
+    include /opt/app-root/etc/nginx.d/*.conf;
 
     server {
-        # listen on port 80
-        listen 8080;
-        # save logs here
-        access_log /var/log/nginx/access.log compression;
+        listen       8080 default_server;
+        listen       [::]:8080 default_server;
+        server_name  _;
+        root         /opt/app-root/src;
 
-        # where the root here
-        root /var/www;
-        # what file to server as index
-        index index.html index.htm;
+        # Load configuration files for the default server block.
+        include      /opt/app-root/etc/nginx.default.d/*.conf;
 
         location / {
             # First attempt to serve request as file, then
