--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,3 +41,5 @@ services:
       - env-postgres.env
     environment:
       - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - '5433:5432'
