refining fixture loading

--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -15,6 +15,11 @@ parameters:
   description: The namespace to apply this template to.
   required: true
   value: bfpeyx-test
+- name: ENVIRONMENT
+  displayName: Environment
+  description: The environment that these template objects will run in (e.g. dev, test, prod)
+  value: TEST
+  required: true
 objects:
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
@@ -74,6 +79,8 @@ objects:
                 name: wally-psql
           - name: POSTGRES_SERVER
             value: wally-psql-master-${NAME}
+          - name: WALLY_ENV
+            value: "${ENVIRONMENT}"
           image: docker-registry.default.svc:5000/${NAMESPACE}/wally-api:${NAME}
           imagePullPolicy: Always
           name: wally-${NAME}-api
