--- a/reporting/package.json
+++ b/reporting/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index2.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node build/src/app.js",
+    "dev": "node --exec babel-node build/src/app.js",
     "start": "npm run build && babel-node build/src/app.js",
     "clean": "rm -Rf build",
     "build": "babel src --out-dir build/src"
@@ -16,11 +16,7 @@
     "@react-pdf/renderer": "^1.6.3",
     "babel-plugin-file-loader": "^1.1.1",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "html-pdf": "^2.2.0",
-    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
