--- a/reporting/package.json
+++ b/reporting/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "pdfgen",
+  "name": "reporting",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index2.js",
+  "main": "src/app.js",
   "scripts": {
     "dev": "node --exec babel-node build/src/app.js",
     "start": "npm run build && babel-node build/src/app.js",
     "clean": "rm -Rf build",
     "build": "babel src --out-dir build/src"
   },
-  "author": "",
+  "author": "Water Team",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@react-pdf/renderer": "^1.6.3",
     "babel-plugin-file-loader": "^1.1.1",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
+    "chartjs-node-canvas": "^2.4.0",
     "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
