--- a/reporting/package.json
+++ b/reporting/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@react-pdf/renderer": "^1.6.3",
+    "axios": "^0.19.0",
     "babel-plugin-file-loader": "^1.1.1",
     "body-parser": "^1.19.0",
     "chart.js": "^2.8.0",
