--- a/openshift/reporting.deploy.yaml
+++ b/openshift/reporting.deploy.yaml
@@ -28,7 +28,7 @@ objects:
         app: wally-${NAME}
         env: ${NAME}
         component: reporting
-        name: wally-${NAME}-reports
+        name: wally-${NAME}-reporting
       sessionAffinity: None
       type: ClusterIP
     metadata:
@@ -38,8 +38,8 @@ objects:
         app: wally-${NAME}
         env: ${NAME}
         component: reporting
-        name: wally-${NAME}-reports
-      name: wally-reports-${NAME}
+        name: wally-${NAME}-reporting
+      name: wally-reporting-${NAME}
   - apiVersion: apps.openshift.io/v1
     kind: DeploymentConfig
     spec:
@@ -49,7 +49,7 @@ objects:
         app: wally-${NAME}
         env: ${NAME}
         component: reporting
-        name: wally-${NAME}-reports
+        name: wally-${NAME}-reporting
       strategy:
         activeDeadlineSeconds: 21600
         resources: {}
@@ -69,13 +69,13 @@ objects:
             app: wally-${NAME}
             env: ${NAME}
             component: reporting
-            name: wally-${NAME}-reports
+            name: wally-${NAME}-reporting
         spec:
           containers:
             - image: >-
-                docker-registry.default.svc:5000/${NAMESPACE}/wally-reports:${NAME}
+                docker-registry.default.svc:5000/${NAMESPACE}/wally-reporting:${NAME}
               imagePullPolicy: Always
-              name: wally-reports
+              name: wally-reporting
               ports:
                 - containerPort: 3000
                   protocol: TCP
@@ -98,10 +98,10 @@ objects:
         - imageChangeParams:
             automatic: true
             containerNames:
-              - wally-reports
+              - wally-reporting
             from:
               kind: ImageStreamTag
-              name: wally-reports:${NAME}
+              name: wally-reporting:${NAME}
               namespace: ${NAMESPACE}
           type: ImageChange
         - type: ConfigChange
@@ -112,8 +112,8 @@ objects:
       labels:
         app: wally-${NAME}
         component: reporting
-        name: wally-${NAME}-reports
-      name: wally-${NAME}-reports
+        name: wally-${NAME}-reporting
+      name: wally-${NAME}-reporting
   - apiVersion: route.openshift.io/v1
     kind: Route
     spec:
@@ -124,7 +124,7 @@ objects:
         termination: edge
       to:
         kind: Service
-        name: wally-reports-${NAME}
+        name: wally-reporting-${NAME}
         weight: 100
       wildcardPolicy: None
     metadata:
@@ -132,8 +132,8 @@ objects:
         app: wally-${NAME}
         env: ${NAME}
         component: reporting
-        name: wally-${NAME}-reports
-      name: wally-${NAME}-reports
+        name: wally-${NAME}-reporting
+      name: wally-${NAME}-reporting
 kind: Template
 metadata:
   resourceVersion: ''
@@ -142,4 +142,4 @@ metadata:
     app: wally-${NAME}
     env: ${NAME}
     component: reporting
-    name: wally-${NAME}-reports
+    name: wally-${NAME}-reporting
