--- a/openshift/reporting.build.yaml
+++ b/openshift/reporting.build.yaml
@@ -26,7 +26,7 @@ objects:
       output:
         to:
           kind: ImageStreamTag
-          name: wally-reports:${NAME}
+          name: wally-reporting:${NAME}
       postCommit: {}
       resources:
         limits:
@@ -63,10 +63,10 @@ objects:
         openshift.io/generated-by: OpenShiftNewBuild
       labels:
         component: reporting
-        name: wally-${NAME}-reports
+        name: wally-${NAME}-reporting
         app: wally-${NAME}
         env: "${NAME}"
-      name: wally-${NAME}-reports
+      name: wally-${NAME}-reporting
   - apiVersion: image.openshift.io/v1
     kind: ImageStream
     spec:
@@ -78,6 +78,6 @@ objects:
       generation: 3
       labels:
         component: reporting
-        name: wally-reports
+        name: wally-reporting
         env: tools
-      name: wally-reports
+      name: wally-reporting
