--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install -r /requirements.txt
 COPY . /app
 ENV PYTHONPATH=/app
 
-RUN pytest /app/app/tests/ -W ignore::DeprecationWarning
+RUN pytest /app/tests/ -W ignore::DeprecationWarning
 
 EXPOSE 8000
 
