--- a/reporting/Dockerfile
+++ b/reporting/Dockerfile
@@ -2,9 +2,12 @@ FROM node:10
 
 WORKDIR /app
 
-RUN chgrp -R 0 /app/ && chmod -R g=u /app/
+USER 0
 
 COPY package*.json /app/
+
+RUN chgrp -R 0 /app/ && \
+    chmod -R g=u /app/
 
 RUN npm ci
 
@@ -13,5 +16,7 @@ COPY . .
 RUN npm run build
 
 EXPOSE 3000
+
+USER 1001
 
 CMD ["npm", "run", "serve"]
