route path added

--- a/openshift/reporting.deploy.yaml
+++ b/openshift/reporting.deploy.yaml
@@ -118,6 +118,7 @@ objects:
     kind: Route
     spec:
       host: ${HOST}
+      path: /reporting
       port:
         targetPort: 3000-tcp
       tls:
