--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -90,6 +90,18 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
+        location /api {
+            proxy_pass ${WALLY_BACKEND_SERVICE}
+        }
+
+        location /docs {
+            proxy_pass ${WALLY_BACKEND_SERVICE}
+        }
+
+        location /reporting {
+            proxy_pass ${WALLY_REPORTING_SERVICE}
+        }
+
         location / {
             # First attempt to serve request as file, then
             # as directory, then fall back to redirecting to index.html
