--- a/openshift/frontend.deploy.yaml
+++ b/openshift/frontend.deploy.yaml
@@ -77,22 +77,22 @@ objects:
               value: ${HOST}/reporting
             - name: VUE_APP_AXIOS_BASE_URL
               value: ${HOST}/api
-            - image: >-
-                docker-registry.default.svc:5000/${NAMESPACE}/wally-web:${NAME}
-              imagePullPolicy: Always
-              name: wally
-              ports:
-                - containerPort: 8080
-                  protocol: TCP
-              resources:
-                requests:
-                  cpu: 50m
-                  memory: 128Mi
-                limits:
-                  cpu: 50m
-                  memory: 128Mi
-              terminationMessagePath: /dev/termination-log
-              terminationMessagePolicy: File
+            image: >-
+              docker-registry.default.svc:5000/${NAMESPACE}/wally-web:${NAME}
+            imagePullPolicy: Always
+            name: wally
+            ports:
+            - containerPort: 8080
+              protocol: TCP
+            resources:
+              requests:
+                cpu: 50m
+                memory: 128Mi
+              limits:
+                cpu: 50m
+                memory: 128Mi
+            terminationMessagePath: /dev/termination-log
+            terminationMessagePolicy: File
           dnsPolicy: ClusterFirst
           restartPolicy: Always
           schedulerName: default-scheduler
