--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -74,15 +74,15 @@ objects:
                 - '--config'
                 - /app/config.yaml
                 - '--client-id'
-                - '$CLIENT_ID'
+                - '$(CLIENT_ID)'
                 - '--client-secret'
-                - '$CLIENT_SECRET'
+                - '$(CLIENT_SECRET)'
                 - '--redirection-url'
                 - 'https://${HOST}'
                 - '--upstream-url'
                 - 'wally-${NAME}:8080'
                 - '--discovery-url'
-                - '$DISCOVERY_URL'
+                - '$(DISCOVERY_URL)'
               envFrom:
                 - secretRef:
                     name: gatekeeper-credentials
