--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,7 +14,10 @@ RUN npm run test:unit && npm run build
 FROM nginx:1.12
 
 COPY --from=build /app/dist/ /tmp/src
-
+COPY --from=build /app/.s2i/bin/run /usr/libexec/s2i/run
 COPY --from=build /app/nginx.conf.tmpl /tmp/src/nginx.conf.tmpl
 
+RUN /usr/libexec/s2i/assemble
+
 EXPOSE 8080
+CMD /usr/libexec/s2i/run
