--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,7 +15,7 @@ FROM nginx:1.12
 
 COPY --from=build /app/dist/ /tmp/src
 COPY --from=build /app/.s2i/bin/run /usr/libexec/s2i/run
-COPY --from=build /app/nginx.conf.tmpl /tmp/src/nginx.conf.tmpl
+COPY --from=build /app/nginx.conf.tmpl /opt/app-root/etc/nginx.conf.tmpl
 
 RUN /usr/libexec/s2i/assemble
 
