--- a/backend/api-tests/hydat.apitest.yaml
+++ b/backend/api-tests/hydat.apitest.yaml
@@ -1,7 +1,24 @@
 environment:
   vars:
     host: http://localhost:8000
+    token: test
+  headers:
+    Authorization: Bearer {{auth_token}}
 requests:
+  - name: Log in
+    url: "{{auth_url}}"
+    method: post
+    body:
+      client_id: "{{auth_id}}"
+      client_secret: "{{auth_secret}}"
+      grant_type: password
+      username: "{{auth_user}}"
+      password: "{{auth_pass}}"
+    expect:
+      status: 200
+    set:
+      - var: auth_token # set the {{auth_token}} here
+        from: access_token
   - name: Get stations
     url: "{{host}}/api/v1/hydat"
     method: get
