--- a/openshift/import-jobs/importer.build.yaml
+++ b/openshift/import-jobs/importer.build.yaml
@@ -1,20 +1,13 @@
 apiVersion: v1
 kind: Template
 parameters:
-- name: NAME
-  displayName: Name
-  description: The name assigned to all of the resources defined in this template.
-  required: true
-  value: test
 - name: GIT_REPO
   displayName: Git Repo URL
   description: The URL to your Git repo.
-  required: true
   value: https://github.com/bcgov-c/wally.git
 - name: GIT_REF
   displayName: Git Reference
   description: The git reference or branch.
-  required: true
   value: master
 metadata:
   name: wally-importer-build-template
@@ -27,7 +20,7 @@ objects:
       output:
         to:
           kind: ImageStreamTag
-          name: wally-importer:${NAME}
+          name: wally-importer:latest
       postCommit: {}
       resources:
         limits:
@@ -48,9 +41,8 @@ objects:
       strategy:
         dockerStrategy:
           from:
-            kind: ImageStreamTag
-            name: 'nginx:1.12'
-            namespace: openshift
+            kind: "DockerImage"
+            name: "debian:latest"
         type: Docker
       successfulBuildsHistoryLimit: 5
       triggers:
