add utils to importer container

--- a/openshift/import-jobs/hydat/hydat.job.yaml
+++ b/openshift/import-jobs/hydat/hydat.job.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: importer
-        image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:v1
+        image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
         command: ['/dataload/load_hydat.sh']
         resources:
           requests:
