--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -21,7 +21,7 @@ parameters:
   value: TEST
   required: true
 - name: REPLICAS
-  value: 1
+  value: "1"
 objects:
   - apiVersion: v1
     kind: Service
