--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -85,6 +85,7 @@ objects:
                 - 'http://wally-${NAME}:8080'
                 - '--discovery-url'
                 - '$(DISCOVERY_URL)'
+                - '--enable-metrics'
               envFrom:
                 - secretRef:
                     name: gatekeeper-credentials
