staging server instrumentation

--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -65,6 +65,9 @@ objects:
         metadata:
           annotations:
             openshift.io/generated-by: OpenShiftNewApp
+            prometheus.io/path: /oauth/metrics
+            prometheus.io/scrape: 'true'
+            prometheus.io/port: 3000
           creationTimestamp: null
           labels:
             app: wally-${NAME}
