--- a/openshift/database.deploy.yaml
+++ b/openshift/database.deploy.yaml
@@ -61,6 +61,9 @@ objects:
           statefulset: ${NAME}${SUFFIX}
           cluster-name: ${NAME}${SUFFIX}
           app.kubernetes.io/name: patroni
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "9187"
       spec:
         affinity:
           podAntiAffinity:
@@ -73,6 +76,28 @@ objects:
                   - ${NAME}${SUFFIX}
               topologyKey: "kubernetes.io/hostname"
         containers:
+        - env:
+            - name: DATA_SOURCE_URI
+              value: 'localhost:5432/wally?sslmode=disable'
+            - name: DATA_SOURCE_USER
+              valueFrom:
+                secretKeyRef:
+                  key: app-db-username
+                  name: wally-psql
+            - name: DATA_SOURCE_PASS
+              valueFrom:
+                secretKeyRef:
+                  key: app-db-password
+                  name: wally-psql
+          image: wrouesnel/postgres_exporter
+          imagePullPolicy: Always
+          name: pg-exporter
+          ports:
+            - containerPort: 9187
+              protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
         - env:
           #TODO: Remove POD_IP in favor of PATRONI_KUBERNETES_POD_IP
           - name: POD_IP
