--- a/openshift/frontend.deploy.yaml
+++ b/openshift/frontend.deploy.yaml
@@ -79,6 +79,26 @@ objects:
           containers:
             - image: quay.io/martinhelmich/prometheus-nginxlog-exporter
               name: nginx-log-exporter
+              livenessProbe:
+                failureThreshold: 3
+                httpGet:
+                  path: /metrics
+                  port: 4040
+                  scheme: HTTP
+                initialDelaySeconds: 3
+                periodSeconds: 10
+                successThreshold: 1
+                timeoutSeconds: 1
+              readinessProbe:
+                failureThreshold: 3
+                httpGet:
+                  path: /metrics
+                  port: 4040
+                  scheme: HTTP
+                initialDelaySeconds: 3
+                periodSeconds: 10
+                successThreshold: 1
+                timeoutSeconds: 1
               resources:
                 limits:
                   cpu: 50m
