--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -100,6 +100,26 @@ objects:
               imagePullPolicy: Always
               name: wally-${NAME}-gatekeeper
               resources: {}
+              livenessProbe:
+                failureThreshold: 3
+                httpGet:
+                  path: /oauth/metrics
+                  port: 3000
+                  scheme: HTTP
+                initialDelaySeconds: 3
+                periodSeconds: 10
+                successThreshold: 1
+                timeoutSeconds: 1
+              readinessProbe:
+                failureThreshold: 3
+                httpGet:
+                  path: /oauth/metrics
+                  port: 3000
+                  scheme: HTTP
+                initialDelaySeconds: 3
+                periodSeconds: 10
+                successThreshold: 1
+                timeoutSeconds: 1
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
