--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -103,7 +103,7 @@ objects:
               livenessProbe:
                 failureThreshold: 3
                 httpGet:
-                  path: /oauth/metrics
+                  path: /oauth/health
                   port: 3000
                   scheme: HTTP
                 initialDelaySeconds: 3
@@ -113,7 +113,7 @@ objects:
               readinessProbe:
                 failureThreshold: 3
                 httpGet:
-                  path: /oauth/metrics
+                  path: /oauth/health
                   port: 3000
                   scheme: HTTP
                 initialDelaySeconds: 3
